@@ -23,7 +23,6 @@ t/00-compile/lib_Dist_Zilla_Plugin_Author_KENTNL_RecommendFixes_pm.t
 t/00-report-prereqs.dd
 t/00-report-prereqs.t
 t/basic.t
-t/lib/dztest.pm
 weaver.ini
 xt/author/critic.t
 xt/release/cpan-changes.t
