@@ -87,12 +87,11 @@ do { my $x = {
                                      'Test::More' => '1.001003'
                                    },
                    'requires' => {
+                                   'Dist::Zilla::Util::Test::KENTNL' => '1.0001002',
                                    'ExtUtils::MakeMaker' => '0',
                                    'File::Spec' => '0',
                                    'Test::DZil' => '0',
-                                   'Test::Fatal' => '0',
-                                   'Test::More' => '0.89',
-                                   'lib' => '0'
+                                   'Test::More' => '0.89'
                                  }
                  }
      };
